feat: V2.0.1 security hardening and V2.0.2 platform versioning
V2.0.1: 12-char password policy, activate-account rate limiting, HSTS (prod), CORS tightening, Bearer token BDR, security docs, test artifact cleanup, frontend validation.

V2.0.2: platform version history, ADR-004 semver strategy, product-version navigation across release documentation.

Co-authored-by: Cursor <cursoragent@cursor.com>